# fastapi-samples

./: makefile
backend/: makefile  pyproject.toml
backend/src/: main.py
backend/src/repositories/: common.py
backend/src/routes/: profile.py
backend/src/routes/schemas/: profile.py
frontend/app/: makefile  package-lock.json  package.json
frontend/app/src/: App.tsx
frontend/app/src/components/: Profile.tsx  Websocket.tsx
frontend/app/src/hooks/: useConversation.ts  useConversationAPi.ts  useHttp.ts  useProfile.ts  useProfileApi.ts  useWebsocket.ts
