[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["inagaki-keisuke <kin71796@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.0"
fastapi = "^0.114.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.2"
ruff = "^0.6.4"
tuna = "^0.5.11"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
